# app_development

./: README.md  compose.yaml
code/: Dockerfile  hello_world.ipynb  pyproject.toml
