[tool.poetry]
name = "hello-world"
version = "0.1.0"
description = "simple hello world app"
authors = ["Asghar Ibraheem Baloch <asg_ibr@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.30.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
